scss/barrel-district.scss
@import "vars.scss";
@import "mixins.scss";
@import "global.scss";

#barrel-district{
    padding-bottom: 100px;
    h2{
        margin:0;
    }
    .header-image{
        background-image: linear-gradient(180deg,rgba(0,0,0,0) 0%,rgba(0,0,0,0.82) 100%), url("../img/barrel-district/barrel-district-image.png");   
    }
    .background-image{
        background-size: contain;
    }
    
    button{
        margin-bottom: 40px;

    }
    
    .details{
        color:$black;
    }
    .brewery-type{
        padding: 0 15%;
        @include bp-small{
            padding: 0 10%;
        }
        .blue-heading{
            margin-top: 50px;
            padding: 10px 0;
            @include bp-small{
                font-size: 22px;
            }
        }
        .font-header{
            font-size: 35px;
            @include bp-medium{
                font-size: 26px;
            }
        }
        
        .brewery-contact-info{
            margin: 20px 0;
            padding: 10px 0;
            .sub-header{
                color: $black;
                font-family: 'Noto Sans JP',Helvetica,Arial,Lucida,sans-serif;
                font-size: 29px;
                padding-bottom: 10px;
                @include bp-small{
                    font-size: 20px;
                }

            }
            .details{
                font-family: 'Noto Sans JP',Helvetica,Arial,Lucida,sans-serif;
                font-size: 19px;
                font-weight: 300;
                line-height: 2;
                letter-spacing: 0.5px;
                text-align: left;
                color: $black;
                margin:0;
                @include bp-small{
                    font-size: 14px;
                }
            
            
            }
            .link{
                color: $blue ;
                font-weight: 500;
            }
        }
    }
}

